--- a/ex5/public/templates/index.html
+++ b/ex5/public/templates/index.html
@@ -6,8 +6,8 @@
     <title>My Social Network</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 w-full h-full px-7 py-7">
-    <header class="w-full flex flex-col mb-7">
+<body class="bg-gray-100 w-full h-full px-9 py-7">
+    <header class="w-full flex flex-col mb-9">
         <h2 class="moments mb-4 text-xl">Moments</h2>
         <section class="stories w-full flex gap-3 items-center justify-start">
             <div class="w-14 h-14 bg-blue-200 rounded-full border-2 border-solid flex justify-center items-center p-3">
@@ -29,9 +29,115 @@
     </header>
 
     <main class="flex flex-col">
-        <div class="w-full h-auto flex justify-between items-center">
+        <div class="w-full h-auto flex justify-between items-center mb-5">
             <h2 class="text-xl">Latest blogs</h2>
+            <img class="filter invert w-8 h-8" src="../images/icons8-opções-de-ordenação-24.png" alt="">
         </div>
+
+        <section class="flex flex-col items-center justify-start gap-6">
+            <article class="w-full h-auto flex flex-col bg-gray-200 rounded-xl px-4 py-3">
+                <header class="w-full flex justify-between items-center mb-6">
+                    <div class="flex gap-3 h-auto w-auto items-center">
+                        <img class="w-8 h-8 rounded-full border border-solid border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                        <div class="flex flex-col">
+                            <h1>Rafael Marques</h1>
+                            <p class="text-gray-500 text-xs font-semibold">24 Minutes Ago</p>
+                        </div>
+                    </div>
+                    <article class="w-auto h-auto moreOptions flex gap-1 items-center justify-center">
+                        <div class="w-1 h-1 bg-gray-500 rounded-full"></div>
+                        <div class="w-1 h-1 bg-gray-500 rounded-full"></div>
+                        <div class="w-1 h-1 bg-gray-500 rounded-full"></div>
+                    </article>
+                </header>
+                <p class="contentPost text-md mb-3">
+                    A simple example!
+                </p>
+                <div class="peopleWhoInteracted flex mb-5">
+                    <img class="rounded-full w-7 h-7 border border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                    <img class="rounded-full w-7 h-7 border border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                    <img class="rounded-full w-7 h-7 border border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                </div>
+                <div class="likesAndComments flex gap-4 items-center justify-start w-full h-auto">
+                    <div class="flex gap-1 items-center justify-center">
+                        <img class="w-6 h-6 filter invert" src="../images/icons8-gostar-empty.png" alt="">
+                        <p class="mt-1">likes</p>
+                    </div>
+                    <div class="flex gap-1 items-center">
+                        <img class="w-6 h-6 opacity-70" src="../images/icons8-balão-de-fala-com-pontos-24 (1).png" alt="">
+                        <p>comments</p>
+                    </div>
+                </div>
+            </article>
+            <article class="w-full h-auto flex flex-col bg-gray-200 rounded-xl px-4 py-3">
+                <header class="w-full flex justify-between items-center mb-6">
+                    <div class="flex gap-3 h-auto w-auto items-center">
+                        <img class="w-8 h-8 rounded-full border border-solid border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                        <div class="flex flex-col">
+                            <h1>Rafael Marques</h1>
+                            <p class="text-gray-500 text-xs font-semibold">24 Minutes Ago</p>
+                        </div>
+                    </div>
+                    <article class="w-auto h-auto moreOptions flex gap-1 items-center justify-center">
+                        <div class="w-1 h-1 bg-gray-500 rounded-full"></div>
+                        <div class="w-1 h-1 bg-gray-500 rounded-full"></div>
+                        <div class="w-1 h-1 bg-gray-500 rounded-full"></div>
+                    </article>
+                </header>
+                <p class="contentPost text-md mb-3">
+                    A simple example!
+                </p>
+                <div class="peopleWhoInteracted flex mb-5">
+                    <img class="rounded-full w-7 h-7 border border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                    <img class="rounded-full w-7 h-7 border border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                    <img class="rounded-full w-7 h-7 border border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                </div>
+                <div class="likesAndComments flex gap-4 items-center justify-start w-full h-auto">
+                    <div class="flex gap-1 items-center justify-center">
+                        <img class="w-6 h-6 filter invert" src="../images/icons8-gostar-empty.png" alt="">
+                        <p class="mt-1">likes</p>
+                    </div>
+                    <div class="flex gap-1 items-center">
+                        <img class="w-6 h-6 opacity-70" src="../images/icons8-balão-de-fala-com-pontos-24 (1).png" alt="">
+                        <p>comments</p>
+                    </div>
+                </div>
+            </article>
+            <article class="w-full h-auto flex flex-col bg-gray-200 rounded-xl px-4 py-3">
+                <header class="w-full flex justify-between items-center mb-6">
+                    <div class="flex gap-3 h-auto w-auto items-center">
+                        <img class="w-8 h-8 rounded-full border border-solid border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                        <div class="flex flex-col">
+                            <h1>Rafael Marques</h1>
+                            <p class="text-gray-500 text-xs font-semibold">24 Minutes Ago</p>
+                        </div>
+                    </div>
+                    <article class="w-auto h-auto moreOptions flex gap-1 items-center justify-center">
+                        <div class="w-1 h-1 bg-gray-500 rounded-full"></div>
+                        <div class="w-1 h-1 bg-gray-500 rounded-full"></div>
+                        <div class="w-1 h-1 bg-gray-500 rounded-full"></div>
+                    </article>
+                </header>
+                <p class="contentPost text-md mb-3">
+                    A simple example!
+                </p>
+                <div class="peopleWhoInteracted flex mb-5">
+                    <img class="rounded-full w-7 h-7 border border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                    <img class="rounded-full w-7 h-7 border border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                    <img class="rounded-full w-7 h-7 border border-black p-1" src="../images/icons8-usuário-30 (1).png" alt="">
+                </div>
+                <div class="likesAndComments flex gap-4 items-center justify-start w-full h-auto">
+                    <div class="flex gap-1 items-center justify-center">
+                        <img class="w-6 h-6 filter invert" src="../images/icons8-gostar-empty.png" alt="">
+                        <p class="mt-1">likes</p>
+                    </div>
+                    <div class="flex gap-1 items-center">
+                        <img class="w-6 h-6 opacity-70" src="../images/icons8-balão-de-fala-com-pontos-24 (1).png" alt="">
+                        <p>comments</p>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
 
 
